# CI-CD

./: .coveragerc  .gitignore  README.md  calculator.py  main.py  pyproject.toml  requirements.txt  test_calculator.py
.github/workflows/: python-ci.yml
