# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ci-cd-calculator"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple calculator package for learning CI/CD."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Add this new section for setuptools-specific configuration
[tool.setuptools]
# Move the py_modules key from [project] to here
py_modules = ["calculator"]