# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ci-cd-calculator"
version = "0.0.1"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple calculator package for learning CI/CD."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# Tell setuptools to look for package code in the 'src' directory
where = ["src"]