# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ci-cd-calculator"
version = "0.0.2"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple calculator package for learning CI/CD."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
lint = [
    "flake8>=5.0.0",
    "black>=22.0.0",
]
[tool.setuptools.packages.find]
# Tell setuptools to look for package code in the 'src' directory
where = ["src"]